--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+/* flex flex-col gap-[32px] row-start-2 items-center sm:items-start */
+/* row-start-3 flex gap-[24px] flex-wrap items-center justify-center */
+/* grid grid-rows-[20px_1fr_20px] items-center justify-items-center min-h-screen p-8 pb-20 gap-16 sm:p-20  */
 
 :root {
   --background: #ffffff;
@@ -14,8 +17,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #F5EE84;
+    --foreground: #03045E;
   }
 }
 
